--- a/Csinkyu/Csinkyu.vcxproj
+++ b/Csinkyu/Csinkyu.vcxproj
@@ -24,7 +24,7 @@
   <ItemGroup>
     <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="EffectManager.cpp" />
-    <ClCompile Include="FireworksObstacle.cpp" />
+    <ClCompile Include="Obst_Fireworks.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Global.h" />
     <ClCompile Include="Item.cpp" />
@@ -32,7 +32,7 @@
     <ClCompile Include="KR_Lib\KR_Main.cpp" />
     <ClCompile Include="KR_Lib\KR_Scene.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MapGimmickLaser.cpp" />
+    <ClCompile Include="Obst_StraightLaser.cpp" />
     <ClCompile Include="KR_Lib\KR_Calc.cpp" />
     <ClCompile Include="KR_Lib\KR_Draw.cpp" />
     <ClCompile Include="KR_Lib\KR_File.cpp" />
@@ -42,32 +42,31 @@
     <ClCompile Include="KR_Lib\KR_Timer.cpp" />
     <ClCompile Include="LaserManager.cpp" />
     <ClCompile Include="MenuManager.cpp" />
-    <ClCompile Include="Meteor.cpp" />
-    <ClCompile Include="MeteorManager.cpp" />
-    <ClCompile Include="Obstacle.cpp" />
-    <ClCompile Include="Obstacle2.cpp" />
-    <ClCompile Include="Obstacle4.cpp" />
-    <ClCompile Include="Obstacle4main.cpp" />
-    <ClCompile Include="Obstacle5.cpp" />
+    <ClCompile Include="Obst_Meteor.cpp" />
+    <ClCompile Include="Obst_MeteorManager.cpp" />
+    <ClCompile Include="Obst_NormalLaser.cpp" />
+    <ClCompile Include="Obst_NormalLaserMain.cpp" />
+    <ClCompile Include="Obst_Ripples.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Stage_Endless.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="TutorialManager.cpp" />
+    <ClCompile Include="Stage_Tutorial.cpp" />
     <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.h" />
     <ClInclude Include="EffectManager.h" />
-    <ClInclude Include="FireworksObstacle.h" />
+    <ClInclude Include="Obst_Fireworks.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="KR_Lib\KR_Debug.h" />
     <ClInclude Include="KR_Lib\KR_Global.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="KR_Lib\KR_Main.h" />
     <ClInclude Include="KR_Lib\KR_Scene.h" />
-    <ClInclude Include="MapGimmickLaser.h" />
+    <ClInclude Include="Obst_StraightLaser.h" />
     <ClInclude Include="KR_Lib\KR_Calc.h" />
     <ClInclude Include="KR_Lib\KR_Draw.h" />
     <ClInclude Include="KR_Lib\KR_File.h" />
@@ -77,16 +76,15 @@
     <ClInclude Include="KR_Lib\KR_Timer.h" />
     <ClInclude Include="LaserManager.h" />
     <ClInclude Include="MenuManager.h" />
-    <ClInclude Include="Meteor.h" />
-    <ClInclude Include="MeteorManager.h" />
-    <ClInclude Include="Obstacle.h" />
-    <ClInclude Include="Obstacle2.h" />
-    <ClInclude Include="Obstacle4.h" />
-    <ClInclude Include="Obstacle4main.h" />
-    <ClInclude Include="Obstacle5.h" />
+    <ClInclude Include="Obst_Meteor.h" />
+    <ClInclude Include="Obst_MeteorManager.h" />
+    <ClInclude Include="Obst_NormalLaser.h" />
+    <ClInclude Include="Obst_NormalLaserMain.h" />
+    <ClInclude Include="Obst_Ripples.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Stage_Endless.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="TutorialManager.h" />
+    <ClInclude Include="Stage_Tutorial.h" />
     <ClInclude Include="UIManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
